--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,50 @@
 * {
     border: 1px solid red;
+    font-family: "Roboto", sans-serif;
+}
+
+a {
+    text-decoration: none;
+    color: white;
 }
 
 body {
     margin: 0;
     min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.header {
+    color: white;
+    background-color: darkblue;
+    display: flex;
+    padding: 0 64px;
+}
+
+.headerlinks {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+    gap: 24px;
+}
+
+.body {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+.container.one {
+    display: flex;
+    justify-content: center;
+    background-color: darkblue;
+    color: white;
+    border: 5px solid green;
+    gap: 32px;
+}
+
+.herotext {
+    width: 300px;
 }
