--- a/styles.css
+++ b/styles.css
@@ -87,3 +87,24 @@ button {
     height: 200px;
     width: auto;
 }
+
+.container.three {
+    flex-direction: column;
+    background-color: lightslategray;
+}
+
+.quotewrapper {
+    display: flex;
+    flex-direction: column;
+    font-size: 36px;
+    font-style: italic;
+    color: #1F2937;
+    width: 900px;
+    margin: 64px;
+}
+
+.quotewrapper h3 {
+    align-self: flex-end;
+    margin-top: 10px;
+    font-size: 24px;
+}
