Finalized color scheme and font,  aligned elements in footer

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
 * {
-    border: 1px solid red;
-    font-family:"fantasy";
+    font-family: 'Roboto', sans-serif;
 }
 
 a {
@@ -13,11 +12,12 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+    background-color: #c1bdb3;
 }
 
 .header {
     color: white;
-    background-color: darkblue;
+    background-color: #3D3B3C;
     display: flex;
     padding: 0 64px;
 }
@@ -45,11 +45,11 @@ body {
 .container.one {
     display: flex;
     justify-content: center;
-    background-color: darkblue;
+    background-color: #3D3B3C;
     color: white;
-    border: 5px solid green;
     align-items: center;
     gap: 128px;
+    padding-bottom: 100px;
 }
 
 .herotext {
@@ -61,10 +61,14 @@ body {
 }
 
 button {
-    background-color: aqua;
-    border-radius: 20%;
-    padding: 8px 16px;
+    background-color: #5f5b6b;
+    color: #c1bdb3;
+    border-radius: 10px;
+    padding: 8px 32px;
+    width: 200px;
     font-weight: bold;
+    border: none;
+    font-size: 20px;
 }
 
 .container.two {
@@ -75,8 +79,9 @@ button {
     display: flex;
     gap: 32px;
     text-align: center;
-    color: grey;
+    color: #5f5b6b;
     margin-bottom: 128px;
+    font-style: italic;
 }
 
 .card {
@@ -90,7 +95,7 @@ button {
 
 .container.three {
     flex-direction: column;
-    background-color: lightslategray;
+    background-color: #999191;
 }
 
 .quotewrapper {
@@ -107,4 +112,24 @@ button {
     align-self: flex-end;
     margin-top: 10px;
     font-size: 24px;
+}
+
+.signupwrapper {
+    background-color: #999191;
+    margin: 64px;
+    padding: 32px 86px;
+    display: flex;
+    justify-content: space-between;
+    width: 900px;
+    align-items: center;
+    border-radius: 25px;
+}
+
+.footer {
+    background-color: #1F2937;
+    color: #c1bdb3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 32px 0;
 }
